syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/gokul656/raft-consensus/protocol";

message RPCRequest {
    oneof message {
        string isAlive = 1;
        AddPeerRequest addPeer = 2;
        UpdatePeerStateRequest updateState = 3;
        InitiateElectionRequest electionRequest = 4;
        google.protobuf.Struct getPeerList = 5;
    }
}

message RPCResponse {
    oneof message {
        string text = 1;
        PeerList collection = 2;
        Peer struct = 3;
    }
}

message CollectionMessage {
    repeated google.protobuf.Any data = 1;
}

message PeerList {
    repeated Peer peers = 1;
}

message Peer {
    string name = 1;
    string address = 2;
    string state = 3;
}

message AddPeerRequest {
    Peer peer = 1;
}

message UpdatePeerStateRequest {
    PeerList peers = 1;
}

message InitiateElectionRequest {
    string name = 1;
    string address = 2;
    uint64 term = 3;
}

service Cluster {
    rpc ConnectionStream(stream RPCRequest) returns (stream RPCResponse) {};
    
    rpc Ping(google.protobuf.Empty) returns(RPCResponse) {}
    rpc AddPeer(AddPeerRequest) returns (PeerList) {}
    rpc ReplicateLogs(PeerList) returns (PeerList) {}
    rpc InitiateElection(InitiateElectionRequest) returns (RPCResponse)  {}
    rpc GetPeers(google.protobuf.Empty) returns (PeerList){}
    rpc GetLogFilename(google.protobuf.Empty) returns (RPCResponse) {}
}